@@ -37,9 +37,14 @@
     color: #777;
 }
 
-/* The auto-refresh button (ExtJS Cycle button) */
+/* The auto-refresh button: status on (ExtJS Cycle button) */
 .gon-autorefresh-on button {
-    color: #6cb24a;
+    color: green;
+}
+
+/* The send-process button: status off (ExtJS Cycle button) */
+.gon-sendprocess-off button {
+    color: red;
 }
 
 /* The groups / categories tree */
@@ -58,19 +63,6 @@
 }
 .x-grid3-row-selected .gon-newsletter-title {
     color: #73726b;
-}
-
-/* Status display above newsletters grid */
-.gon-status {
-    background: #fff;
-    padding: 15px 15px 0 15px;
-    text-align: right;
-}
-.gon-crontrigger-enabled {
-    color: green;
-}
-.gon-crontrigger-disabled {
-    color: red;
 }
 
 /* Expanded rows in grids */
