@@ -2,9 +2,14 @@
  * Custom GoodNews CMP styles for Revo >= 2.3.0
  */
 
-/* The auto-refresh button (ExtJS Cycle button) */
+/* The auto-refresh button: status on (ExtJS Cycle button) */
 .gon-autorefresh-on button {
     color: #6cb24a;
+}
+
+/* The send-process button: status off (ExtJS Cycle button) */
+.gon-sendprocess-off button {
+    color: #be0000;
 }
 
 /* The container selector in ActionBar */
@@ -28,19 +33,6 @@
 }
 .x-grid3-row-selected .gon-newsletter-title {
     color: #73726b;
-}
-
-/* Status display above newsletters grid */
-.gon-status {
-    background: #fff;
-    padding: 15px 15px 0 15px;
-    text-align: right;
-}
-.gon-crontrigger-enabled {
-    color: #6cb24a;
-}
-.gon-crontrigger-disabled {
-    color: #be0000;
 }
 
 /* Expanded rows in grids */
