@@ -118,8 +118,7 @@ $_lang['goodnews.newsletter_draft']                                 = '(Entwurf)
 $_lang['goodnews.newsletter_cat_not_defined']                       = '(keine gew&auml;hlt)';
 $_lang['goodnews.newsletter_cat_assign']                            = 'Mailing Kategorien zuweisen';
 $_lang['goodnews.newsletter_cat_assign_desc']                       = 'Entsprechend dieser Zuweisung erfolgt die Zusammenstellung der Empfänger.';
-$_lang['goodnews.newsletter_sending_process_enabled']               = 'Sendeprozess: AKTIVIERT';
-$_lang['goodnews.newsletter_sending_process_disabled']              = 'Sendeprozess: DEAKTIVIERT';
+$_lang['goodnews.newsletter_send_process']                          = 'Sendeprozess: ';
 $_lang['goodnews.newsletter_grid_autorefresh']                      = 'Auto-Refresh: ';
 $_lang['goodnews.newsletter_send_log_view']                         = 'Versand Protokoll öffnen';
 $_lang['goodnews.newsletter_send_log_window_title']                 = 'Versand Protokoll für Mailing ID: ';
