@@ -118,8 +118,7 @@ $_lang['goodnews.newsletter_draft']                                 = '(Draft)';
 $_lang['goodnews.newsletter_cat_not_defined']                       = '(none selected)';
 $_lang['goodnews.newsletter_cat_assign']                            = 'Assign mailing categories';
 $_lang['goodnews.newsletter_cat_assign_desc']                       = 'Accordingly to this assignment the recipients are assorted.';
-$_lang['goodnews.newsletter_sending_process_enabled']               = 'Sending Process: ENABLED';
-$_lang['goodnews.newsletter_sending_process_disabled']              = 'Sending Process: DISABLED';
+$_lang['goodnews.newsletter_send_process']                          = 'Send-Process: ';
 $_lang['goodnews.newsletter_grid_autorefresh']                      = 'Auto-Refresh: ';
 $_lang['goodnews.newsletter_send_log_view']                         = 'View Send Log';
 $_lang['goodnews.newsletter_send_log_window_title']                 = 'Send Log for Mailing ID: ';
